# signwriting-description

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish-docker.yaml  test.yaml
signwriting_description/: CONVENTIONS.md  evaluation.py  gpt_description.py  llm_as_judge.py  naive_description.py  server.py  symbols.json  test_naive_description.py
signwriting_description/few_shots/: data.json  readme.py
signwriting_description/results/: GPT-4 Omni (unknown).md  GPT-4 Omni 2024-05-13.md  GPT-4 Omni 2024-08-06.md  GPT-4 Omni 2024-11-20.md  GPT-4 Vision (deprecated).md  gpt-4.1-2025-04-14.md  gpt-4o-2024-05-13.md  gpt-4o-2024-08-06.md  gpt-4o-2024-11-20.md  gpt-5-2025-08-07.md  gpt-5-mini-2025-08-07.md  gpt-5-nano-2025-08-07.md  gpt-5.2-2025-12-11.md  o3-2025-04-16.md
