[project]
name = "signwriting-description"
description = "Automatic Spoken Language Description of SignWriting"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
    "Pillow",
    "openai>=1.8.0",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "sacrebleu"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
good-names = ["i", "f", "x", "y"]

[tool.setuptools]
packages = [
    "signwriting_description",
]

[tool.setuptools.package-data]
signwriting_description = ["**/*.json"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_description"]
