[project]
name = "signwriting-description"
description = "Automatic Spoken Language Description of SignWriting"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
    "Pillow",
    "openai>=1.8.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "sacrebleu",
]

server = [
    "fastapi",
    "diskcache",
    "uvicorn[standard]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "PT", # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE", # flake8-blind-except
]

[tool.setuptools]
packages = [
    "signwriting_description",
]

[tool.setuptools.package-data]
signwriting_description = ["**/*.json"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_description"]
